<resources>
    <string name="app_name">NetKick</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="netkick_logo">NETKICK</string>
    <string name="live_score_title">Live Score</string>
    <string name="popular_teams_title">Popular Teams</string>
    <string name="top_news">Top News</string>
    <string name="explore_title">Explore</string>
    <string name="view_all_btn">View All</string>
    <string name="read_more">Read More</string>
    <string name="goalsFixture">%d - %d</string>
    <string name="vsFixture">%s vs %s</string>
    <string name="unknown">Unknown</string>
    <string name="DateLiveTime">%s %s</string>
    <string name="vs">VS</string>
    <string name="oops">UH OH</string>
    <string name="no_live_matches">No Live Matches</string>
    <string name="no_current">Our Database does not return any live matches currently</string>
    <string name="no_head">Currently No Headline</string>
    <string name="no_live">UH OH</string>
    <string name="skip">Skip</string>
    <string name="pick_one_to_show_all_league_in_that_country">Pick one to show all league in that country</string>
    <string name="top_scorer">Top Scorer</string>
    <string name="trophies_title">TROPHIES</string>
    <string name="by_league">By League</string>
    <string name="players">Players</string>
    <string name="coach">Coach Info</string>
    <string name="no_country_found">No Country Found</string>
    <string name="news">Football News</string>
    <string name="code">Code:</string>
    <string name="country">Country:</string>
    <string name="venue">Venue</string>
    <string name="name">Name:</string>
    <string name="city">City:</string>
    <string name="surface">Surface:</string>
    <string name="capacity">Capacity:</string>
    <string name="address">Address:</string>
    <string name="see_all_players">See all Players</string>
    <string name="est_year">Est %d</string>
    <string name="country_code">"%s"</string>
    <string name="nationality">Nationality:</string>
    <string name="age">Age:</string>
    <string name="birth_date">Birth Date:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="members">Members:</string>
    <string name="leagues">Leagues</string>
    <string name="search_for_league_by_name">Search for League by name</string>
    <string name="no_league_found">No League Found</string>
    <string name="type">Type:</string>
    <string name="season">Season:</string>
    <string name="matches">Matches</string>
    <string name="standings">Standings</string>
    <string name="ranks">#</string>
    <string name="points">Points</string>
    <string name="played">Played</string>
    <string name="team">Team</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="top_scorerh">Top scorer</string>
    <string name="info">Created by kevin Goutama. 2023</string>
    <string name="goals">Goals:</string>
    <string name="shots">Shots:</string>
    <string name="passes">Passes:</string>
    <string name="tackles">Tackles:</string>
    <string name="duels_won">Duels Won:</string>
    <string name="total_goals">Total Goals:</string>
    <string name="position">Position:</string>
    <string name="rating">Rating:</string>
    <string name="appearances">Appearances:</string>
    <string name="no_top_score_available">No Top Score Available</string>
    <string name="coach_search">Coach Search</string>
    <string name="search_coach_by_name">Search coach by name</string>
    <string name="current_team">Current Team:</string>
    <string name="career">CAREER</string>
    <string name="to">To</string>
    <string name="leaguetr">League:</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="team_search">Team Search</string>
    <string name="search_team_by_name">Search Team by name</string>
    <string name="player_search">Player Search</string>
    <string name="selected_team">Selected Team:</string>
    <string name="search_player_in_team_by_name">Search player in team by name</string>
    <string name="player_trophies">PLAYER TROPHIES</string>
    <string name="team_selected">Team Selected:</string>
    <string name="first_name">First Name:</string>
    <string name="profile">PROFILE</string>
    <string name="last_name">Last Name:</string>
    <string name="age2">Age:</string>
    <string name="in_team">In Team:</string>
    <string name="group">Group %s</string>
    <string name="no_coach_found">No Coach Found</string>
    <string name="no_team_found">No Team Found</string>
    <string name="no_player_found">No Player Found</string>
    <string name="matchess">MATCHES</string>
    <string name="round">Round:</string>
    <string name="no_matches_available">No Matches Available</string>
    <string name="no_standings_available">No Standings Available</string>
    <string name="fixture">FIXTURE:</string>
    <string name="status">Status:</string>
    <string name="winner">Winner:</string>
    <string name="statistics">STATISTICS</string>
    <string name="shots_on_goal">Shots On Goal</string>
    <string name="shots_off_goal">Shots off Goal</string>
    <string name="total_shots">Total Shots</string>
    <string name="blocked_shots">Blocked Shots</string>
    <string name="shots_outsidebox">Shots Outsidebox</string>
    <string name="shots_insidebox">Shots Insidebox</string>
    <string name="foul">Foul</string>
    <string name="corner_kicks">Corner Kicks</string>
    <string name="ball_possession">Ball Possession</string>
    <string name="offsides">Offsides</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="goalkeeper_saves">Goalkeeper Saves</string>
    <string name="total_passes">Total Passes</string>
    <string name="passes_accurate">Passes Accurate</string>
    <string name="passesper">Passes %</string>
</resources>