<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/background1">

    <TextView
        android:id="@+id/tv_rank_header"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:text="@string/ranks"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_team_name_header"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:text="@string/team"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="12dp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center_vertical"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_points_header"
        android:layout_width="85dp"
        android:layout_height="match_parent"
        android:text="@string/points"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_played_header"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:text="@string/played"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_wins_header"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:text="@string/w"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_draw_header"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:text="@string/d"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_lose_header"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:text="@string/l"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_goalsf_header"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:text="@string/gf"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_goalsa_header"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:text="@string/ga"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightPurple"
        android:background="@drawable/back_header"
        android:gravity="center"/>


</LinearLayout>