<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.main.fragments.TrophiesFragment"
    android:background="@color/background1">

    <TextView
        android:id="@+id/tv_top_score_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/top_scorer"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_top_scorer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_next_purple"
        android:drawableStart="@drawable/ranking_icon"
        android:text="@string/by_league"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:drawablePadding="25dp"
        android:textAlignment="textStart"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:elevation="10dp"
        android:background="@drawable/button_background_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_top_score_title"/>

    <TextView
        android:id="@+id/tv_trophies_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trophies_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_top_scorer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_player_trophies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_next_purple"
        android:drawableStart="@drawable/trophy_icon"
        android:text="@string/players"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:drawablePadding="35dp"
        android:textAlignment="textStart"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:elevation="10dp"
        android:background="@drawable/button_background_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_trophies_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_coach_trophies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_next_purple"
        android:drawableStart="@drawable/trophy_icon"
        android:text="@string/coach"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:drawablePadding="35dp"
        android:textAlignment="textStart"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:elevation="10dp"
        android:background="@drawable/button_background_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_player_trophies"/>


    <TextView
        android:id="@+id/tv_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/lightPurple"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>