<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.NetKick"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.main.fragments.ExploreFragment"
    android:background="@color/background1">

    <TextView
        android:id="@+id/tv_nothing_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightPurple"
        android:text="@string/no_country_found"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_explore_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/explore_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_skip"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/transparant"
        android:drawableEnd="@drawable/skip_icon"
        android:text="@string/skip"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_explore_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_explore_title" />

    <SearchView
        android:id="@+id/sv_country"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:searchIcon="@drawable/search_icon"
        android:searchHintIcon="@drawable/search_icon"
        android:closeIcon="@drawable/x_purple"
        android:queryHint="Country Name"
        android:iconifiedByDefault="false"
        android:background="@drawable/search_bar_background"
        android:queryBackground="@color/transparant"
        app:layout_constraintTop_toBottomOf="@id/tv_explore_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_country_search_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_one_to_show_all_league_in_that_country"
        android:textColor="@color/lightPurple"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/sv_country"
        app:layout_constraintStart_toStartOf="@id/sv_country"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_countries_league"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_country_search_desc"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>